--- a/playbook.yml.j2
+++ b/playbook.yml.j2
@@ -1,28 +1,14 @@
 ---
-
-- name: Generate dynamic host list
+- name: play to gather dynamic host list
   hosts: localhost
-  gather_facts: yes
-  tasks: 
-    - name: get ip host
-      shell: echo "{{ hosts }}" | tr '[,]' '\n'
-      register: dockerHost
-
-    - set_fact: dockerHost="{{dockerHost}}"
-      when: dockerHost.changed
-
-    - debug: msg="{{ dockerHost.stdout }}"
-
-    - name: Greate dynamic group host
-      add_host:
-        group: docker
-        hostname: {{item}}
-      with_item: "{{ dockerHost.stdout }}"
+  gather_facts: true
+  tasks:
+    - include: dynamic_ip.yml
 
 - hosts: docker
   become: yes
   become_method: sudo
   roles:
-    {%for i in roles%}
-        - {{ i }}
-    {%endfor%}
+    {%for i in roles -%}
+    - {{ i }}
+    {%endfor-%}
